tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/leading-point.stderr
TOML parse error at line 1, column 17
  |
1 | leading-point = .12345
  |                 ^
invalid floating-point number
expected leading digit
